--- a/src/m-nail-show/static/show.html
+++ b/src/m-nail-show/static/show.html
@@ -96,7 +96,7 @@
                 <%= show.detail %>
             </div>
             <div class="delete-icon" ng-tap="modalDialogClose()">
-                <i class="icon-remove-circle fancybox-close-icon-s"></i>
+                <img src="imgs/icon-cancel.png">
             </div>
         </div>
 
