--- a/src/m-setting/static/aboutlos.html
+++ b/src/m-setting/static/aboutlos.html
@@ -1,7 +1,7 @@
 <div id="m-setting-aboutlos-area" class="featureSpace">
     <style>
         #m-setting-aboutlos-area{
-            background: #ededed url("imgs/bg-line.png") center repeat;
+            background-color: #efeff4!important;
         }
         .m-aboutlos-content{overflow: auto;}
         .m-aboutlos-content>div:first-child{ font-size: 2rem; color: #565656; min-width: 4rem; text-align: center;}
