--- a/src/m-setting/static/performance.html
+++ b/src/m-setting/static/performance.html
@@ -37,14 +37,11 @@
     text-align: center;
     width: 18rem;
     font-size: 1.4rem;
-    color: #565656;
+    color: #007aff;
     padding-left: 1rem;
     padding-right: 1rem;
-    border-bottom: 1px solid #d0d0d0;
-    border-top: 1px solid #d0d0d0;
     height: 2.5rem;
     line-height: 2.5rem;
-    background-color: #f7f7f7;
 }
 
 .time-day-select .prev, .time-day-select .next {
@@ -53,10 +50,7 @@
     line-height: 2.5rem;
     text-align: center;
     display: inline-block;
-    background-color: #bd438e;
-    border-bottom: 1px solid #bd438e;
-    border-top: 1px solid #bd438e;
-    color: #fff;
+    color: #007aff;
     font-size: 2.5rem;
 }
 
@@ -66,9 +60,6 @@
 }
 
 .time-day-select .disable {
-    border-bottom: 1px solid #d0d0d0;
-    border-top: 1px solid #d0d0d0;
-    background-color: #eeeeee;
     color:#d0d0d0;
 }
 
