--- a/src/m-setting/static/messageCenter.html
+++ b/src/m-setting/static/messageCenter.html
@@ -1,11 +1,7 @@
 <div id="m-setting-messageCenter-area" class="featureSpace">
 <style>
 #m-setting-messageCenter-area {
-    background-color: #ededed;
-}
-
-#m-aboutlos-suggestion {
-    background: #ededed url("imgs/bg-line.png") center repeat;
+    background-color: #efeff4;
 }
 
 .m-setting-messageCenter {
@@ -221,7 +217,7 @@
 }
 
 .cateSelected {
-    background-color: #398acb !important;
+    background-color: #007aff !important;
     color: #fff !important;
 }
 
@@ -234,7 +230,7 @@
     color: #bd438e;
     width: 95%;
     padding-bottom: 0.7rem;
-    border-bottom: 2px solid;
+    border-bottom: 1px solid;
 }
 
 .message-model {
@@ -776,7 +772,7 @@
         </div>
         <div class="m-button-pink inlinebl mb-1 mt-1"
              ng-tap="nextStep()"
-             style="background-color: #767676; margin-left: 88.91875%;"><span>下一步</span><i
+             style="margin-left: 88.91875%;"><span>下一步</span><i
                 class="icon-chevron-right ml-1"></i></div>
     </div>
 </div>
