--- a/src/m-setting/static/terminal.html
+++ b/src/m-setting/static/terminal.html
@@ -12,7 +12,7 @@
         color: #bd438e;
         padding-left: 2rem;
         padding-bottom: 0.7rem;
-        border-bottom: 2px solid;
+        border-bottom: 1px solid;
         margin-right: 2rem;
     }
 
@@ -188,8 +188,8 @@
     <div class="right terminal-content">
         <!---终端设置界面-->
         <div ng-show="selectedStyle=='terminal'">
-            <div class="terminal-title">打印机连接</div>
-            <div class="printerSetting">
+            <div class="terminal-title android-display-special">打印机连接</div>
+            <div class="printerSetting android-display-special">
                 <table style="margin-bottom: 3rem;">
                     <tr>
                         <td></td>
