修改PC版本服务器代码

--- a/src/m-member/static/allMemberList.html
+++ b/src/m-member/static/allMemberList.html
@@ -637,9 +637,9 @@ border-bottom: 1px solid #9b9e9e;padding:3rem">
             <li>
                 <div class="m-input-underline">
                     <label class="caption"><%= member.birthday %>：</label>
-                    <input class="m-input" type="text" ng-tap="selBirthday($event)"
+                    <input class="m-input" type="text"
                            placeholder="<%= member.birthday_input_placeholder %>"
-                           ng-model="newMember.birthday" disabled/>
+                           ng-model="newMember.birthday" />
                 </div>
             </li>
             <li>
